# LearningCmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
buils/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  LearningCmake.sln  LearningCmake.vcxproj  LearningCmake.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
src/: Utility.cpp  Utility.h  main.cpp
